@@ -1,4 +1,5 @@
 == 0.7.0 Spherical Cow release
+ * INT signal now force stop and QUIT signal graceful stop.
  * Warn when descriptors table size can't be set as high as expected.
  * Eval Rackup config file using top level bindings.
  * Remove daemons gem dependency on Windows plateform, fixes #45.
